src/test/ui/issue-25793.stderr
error[E0503]: cannot use `self.width` because it was mutably borrowed
  --> $DIR/issue-25793.rs:13:9
   |
LL |         $this.width.unwrap()
   |         ^^^^^^^^^^^ use of borrowed `*self`
...
LL |         self.get_size(width!(self))
   |         ----          ------------ in this macro invocation
   |         |
   |         borrow of `*self` occurs here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0503"
